--- a/mafc-app/package.json
+++ b/mafc-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@szhsin/react-accordion": "^1.4.0",
     "@tailwindcss/postcss": "^4.0.6",
     "clsx": "^2.1.1",
     "googleapis": "^146.0.0",
