--- a/mafc-app/package.json
+++ b/mafc-app/package.json
@@ -14,9 +14,11 @@
     "clsx": "^2.1.1",
     "googleapis": "^146.0.0",
     "next": "15.1.6",
+    "nodemailer": "^6.10.1",
     "normalize.css": "^8.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.5",
     "uuid": "^11.0.5"
   },
